--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "browser-image-compression": "^2.0.2",
+    "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
+    "jspdf": "^4.1.0",
+    "mammoth": "^1.11.0",
     "next": "15.3.1",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^2.4.5",
+    "pdfjs-dist": "^3.11.174",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
