--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "file-saver": "^2.0.5",
     "jspdf": "^4.1.0",
     "mammoth": "^1.11.0",
-    "next": "15.3.1",
+    "next": "^15.5.12",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^2.4.5",
     "pdfjs-dist": "^3.11.174",
@@ -28,7 +28,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.3.1",
+    "eslint-config-next": "^15.5.12",
     "tailwindcss": "^4"
   }
 }
